test/correct/Sections.hs
module Sections where

main = 
    (   (+1) 2
    ,   (+(-3)) 2
    ,   (+(-1)) 3
    ,   map (*2) [1..10]
    ,   (+(3*2)) 7
    ,   (1+) 2
    ,   (3-) 2
    ,   (1-) 3
    ,   map (2*) [1..10]
    ,   ((3*2)+) 7
    )
    
    