test/typeerrors/Heuristics/AppRemove1.hs
module AppRemove1 where

main = map 3 even [1..10]
